# Veriff_DS_test

./: .gitattributes  .gitignore  README.md  pyproject.toml
discovery/: test1_basic_haar_cascade.py  test2_combined_haar_cascade.py  test3_mediapipe.py  test4_YOLOv3-tiny.py  test4_multi_task_CNN.py  test5_YOLOv3-tiny_liveness_detection.py  test6_Yolov3-tiny-eye_lips_movement.py  test7_YOLOv3-tiny_antispoofing_DeepPBS.py  testv9_Yolov3-tiny_cdcnpp.py
models/: sort.py
output_data/: merged_labels_submitted.csv  predicted_labels.csv  results_veriff10_yolov3_cdcnpp_sort.csv  results_veriff10_yolov3_deeppixbis_sort.csv  results_veriff11_yolov3_cdcnpp_sort.csv  results_veriff11_yolov3_deeppixbis_sort.csv  results_veriff12_yolov3_cdcnpp_sort.csv  results_veriff12_yolov3_deeppixbis_sort.csv  results_veriff16_yolov3_cdcnpp_sort.csv  results_veriff16_yolov3_deeppixbis_sort.csv  results_veriff17_yolov3_cdcnpp_sort.csv  results_veriff17_yolov3_deeppixbis_sort.csv  results_veriff18_yolov3_cdcnpp_sort.csv  results_veriff18_yolov3_deeppixbis_sort.csv  results_veriff19_yolov3_cdcnpp_sort.csv  results_veriff19_yolov3_deeppixbis_sort.csv  results_veriff1_yolov3_cdcnpp_sort.csv  results_veriff1_yolov3_deeppixbis_sort.csv  results_veriff2_yolov3_cdcnpp_sort.csv  results_veriff2_yolov3_deeppixbis_sort.csv  results_veriff3_yolov3_cdcnpp_sort.csv  results_veriff3_yolov3_deeppixbis_sort.csv  results_veriff4_yolov3_cdcnpp_sort.csv  results_veriff4_yolov3_deeppixbis_sort.csv  results_veriff5_yolov3_cdcnpp_sort.csv  results_veriff5_yolov3_deeppixbis_sort.csv  (+6 more)
src/: calculate_metrics.py  utils.py  (+6 more)
(+5 files in other folders)
