[tool.poetry]
name = "face-video-detection"
version = "0.1.0"
description = ""
authors = ["alberto.sosa"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
opencv-python = "4.9.0.80"
scikit-learn = "^1.7.1"
jupyter = "^1.1.1"
mediapipe = "^0.10.21"
mtcnn = "^1.0.0"
torch = "2.7.1"
torchvision = "0.22.1"
filterpy = "^1.4.5"
scikit-image = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
